welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:9: error: not found: value doite
	     	gauche();avance();doite();avance();droite();
                                  ^