welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() { 

	def faireV() {
		for(x<-1 to 3){
			baisseBrosse();
			leveBrosse();
	     	gauche();avance();doite();avance();droite();

		}
	}
	faireV();faireV();faireV();
}
